--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.0",
+    "lodash.findindex": "^4.6.0",
     "lodash.flatten": "^4.4.0",
     "lodash.isequal": "^4.5.0",
     "react": "^18.2.0",
