Save project state to cookies. Support settings.

--- a/src/demoProject.json
+++ b/src/demoProject.json
@@ -44,6 +44,7 @@
         "timeRange": ["2023-01-01", "2023-03-30"],
         "period": "weeks",
         "timePickerMode": "month",
-        "isDemo": true
+        "constrainProjectByEstimate": true,
+        "shouldSave": false
     }
 }
