--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.0",
     "browserify-zlib": "^0.2.0",
+    "js-cookie": "^3.0.1",
     "lodash.findindex": "^4.6.0",
     "lodash.flatten": "^4.4.0",
     "lodash.isequal": "^4.5.0",
+    "lodash.isstring": "^4.0.1",
     "lz-string": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
