--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash.findindex": "^4.6.0",
     "lodash.flatten": "^4.4.0",
     "lodash.isequal": "^4.5.0",
+    "lodash.isnil": "^4.0.0",
     "lodash.isstring": "^4.0.1",
     "lz-string": "^1.5.0",
     "react": "^18.2.0",
